--- a/watchweb.html
+++ b/watchweb.html
@@ -292,17 +292,18 @@
       <br></br>
       <h2>About Our Project</h2>
       <dl>
-            <dt> Quote/tagline</dt>
-                <dd>ghjmfk,</dd>
-            <dt> Github repsitory</dt>
-                <dd>ghjmfk,</dd>
+            <dt> Tagline</dt>
+                <dd>Watching your speed and your safety.</dd> 
             <dt>Problem we faced</dt>
-                <dd>ghjmfk,</dd>
+                <dd> Programming the motion sensor to work like a speedometer.</dd>
             <dt>Type of Project</dt>
                 <dd>Hardware, Robotics, Wearable Technology</dd>
             <dt>Technology Used</dt>
                 <dd>Programmed the Adafruit Circuit Playground using C++ in Arduino</dd>
       </dl>
+      <p> 
+        <a href ="https://github.com/ginagerace/2016_SIP_VerizonChicago_WatchIt"> Github Repository</a>
+      </p>
     </div>
   </div>
 </div>
