--- a/watchweb.html
+++ b/watchweb.html
@@ -410,6 +410,7 @@
             </dl>
                 
          </p>
+         <img src="grouppic.png" alt="Group Picture" width="1000" height="899">
     </div>
 </div>
 
