--- a/watchweb.html
+++ b/watchweb.html
@@ -217,7 +217,7 @@
 
 <div class="jumbotron text-center">
   <h1>WatchIt!</h1>
-  <a href="http://www.w3schools.com/html/">See the WatchIt in action</a>
+  <a href="https://www.youtube.com/watch?v=qyKO3QhHqWU">See the WatchIt in action</a>
 </div>
 
 <!-- Container (About Section) -->
